--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://ai-remover-indol.vercel.app/" />
+  
+  <!-- Title & Meta -->
   <title>AI Background Remover PRO | Free Online High-Quality Cutouts</title>
-  <meta name="description"
-    content="Instantly remove backgrounds from images with professional AI. 100% automatic, high precision, and free. Create transparent PNGs and professional cutouts in seconds." />
-  <meta name="keywords"
-    content="background remover, ai background removal, remove bg online, transparent png, image cutout, free background remover" />
+  <meta name="description" content="Instantly remove backgrounds from images with professional AI. 100% automatic, high precision, and free. Create transparent PNGs and professional cutouts in seconds." />
+  <meta name="keywords" content="background remover, ai background removal, remove bg online, transparent png, image cutout, free background remover, remove background from image, online photo editor" />
+  
+  <!-- Open Graph / Facebook -->
   <meta property="og:title" content="AI Background Remover PRO | Free Online High-Quality Cutouts" />
   <meta property="og:description" content="Instantly remove backgrounds with professional AI precision." />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ai-remover-indol.vercel.app/" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AI Background Remover PRO" />
+  <meta name="twitter:description" content="Remove backgrounds instantly with AI" />
+  
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "AI Background Remover PRO",
+    "description": "Free online AI tool to remove backgrounds from images instantly",
+    "url": "https://ai-remover-indol.vercel.app/",
+    "applicationCategory": "PhotoEditingApplication",
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
 </head>
 
 <body>
