--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification: google16995c6e68204458.html" />
+  
   <!-- ✅ 1. CANONICAL URL - Add this -->
   <link rel="canonical" href="https://ai-remover-indol.vercel.app/" />
 
