--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Google Search Console Verification -->
-  <meta name="google-site-verification: google16995c6e68204458.html" />
+  <meta name="google-site-verification" content="Ux8uneMjaqvbAbCZZ7micIhXpRj6DrsAGxjJEY7Ns2w" />
   
   <!-- ✅ 1. CANONICAL URL - Add this -->
   <link rel="canonical" href="https://ai-remover-indol.vercel.app/" />
